Added MVP uniforms to the shader using descriptor sets